--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -75,6 +75,146 @@
     "\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b97fd81-546e-44e4-b770-bd6086b513e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Définir la liste des produits\n",
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "# 1. Créer un dictionnaire vide appelé inventory\n",
+    "inventory = {}\n",
+    "\n",
+    "def initialize_inventory(products):\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        # Boucle de validation pour s'assurer que l'utilisateur entre un nombre valide\n",
+    "        while True:\n",
+    "            try:\n",
+    "                quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "                if quantity < 0:\n",
+    "                    print(\"Quantity cannot be negative. Please enter a positive number.\")\n",
+    "                    continue\n",
+    "                inventory[product] = quantity\n",
+    "                break  # Sort de la boucle si l'entrée est valide\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid input! Please enter a valid number.\")\n",
+    "    return inventory\n",
+    "\n",
+    "inventory = initialize_inventory(products)\n",
+    "\n",
+    "def get_customer_orders():\n",
+    "    customer_orders = set()  # ← SET comme demandé dans l'énoncé\n",
+    "    \n",
+    "    # Boucle de validation pour s'assurer que l'utilisateur entre un nombre valide\n",
+    "    while True:\n",
+    "        try:\n",
+    "            num_orders = int(input(\"Enter the number of customer orders: \"))\n",
+    "            if num_orders <= 0:\n",
+    "                print(\"Please enter a positive number.\")\n",
+    "                continue\n",
+    "            break  # Sort de la boucle si l'entrée est valide\n",
+    "        except ValueError:\n",
+    "            print(\"Invalid input! Please enter a valid number.\")\n",
+    "    \n",
+    "    for i in range(num_orders):\n",
+    "        product = input(f\"Enter the name of product {i+1} (or type 'done' to finish): \").strip().lower()\n",
+    "        \n",
+    "        # Condition de sortie : permet de terminer avant d'atteindre num_orders\n",
+    "        if product == 'done':\n",
+    "            break\n",
+    "        \n",
+    "        # Ignorer les entrées vides\n",
+    "        if product:\n",
+    "            customer_orders.add(product)  # ← Pas de quantité, juste le produit\n",
+    "        else:\n",
+    "            print(\"Product name cannot be empty. Please try again.\")\n",
+    "            # On ne décrémente pas i, donc on redemandera ce produit\n",
+    "        return customer_orders\n",
+    "\n",
+    "customer_orders = get_customer_orders()\n",
+    "\n",
+    "def calculate_total_price(customer_orders):\n",
+    "    prices = {}\n",
+    "    \n",
+    "    # Demander le prix de chaque produit avec validation\n",
+    "    for product in customer_orders:\n",
+    "        while True:\n",
+    "            try:\n",
+    "                price = float(input(f\"Enter the price of {product}: \"))\n",
+    "                if price < 0:\n",
+    "                    print(\"Price cannot be negative. Please enter a positive number.\")\n",
+    "                    continue\n",
+    "                prices[product] = price\n",
+    "                break  # Sort de la boucle si l'entrée est valide\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid input! Please enter a valid number.\")\n",
+    "    \n",
+    "    # Calculer le total (sum sur les valeurs du dictionnaire)\n",
+    "    total_price = sum([price * 1 for price in product_prices])\n",
+    "    return total_price\n",
+    "\n",
+    "total_price = calculate_total_price(customer_orders)\n",
+    "print(f\"\\nTotal price of the order: ${total_price:.2f}\")\n",
+    "\n",
+    "def update_inventory(customer_orders, inventory):\n",
+    "    print(\"\\nReady to update Inventory\")\n",
+    "    \n",
+    "    # Parcourir les commandes et déduire 1 unité pour chaque produit commandé\n",
+    "    for product_name in customer_orders:\n",
+    "        # S'assurer que le produit existe avant de tenter la mise à jour\n",
+    "        if product_name in inventory:\n",
+    "            # Soustraire la quantité commandée (1 unité) de la quantité en stock\n",
+    "            inventory[product_name] -= 1\n",
+    "        else:\n",
+    "            print(f\"Warning: '{product_name}' was ordered but not found in inventory.\")\n",
+    "    \n",
+    "    # 2. Utiliser une DICTIONARY COMPREHENSION pour filtrer les produits de quantité zéro\n",
+    "    # Créer un nouvel inventaire contenant uniquement les paires clé/valeur (produit:quantité)\n",
+    "    # où la quantité (value) est strictement supérieure à zéro\n",
+    "    updated_inventory = {\n",
+    "        product: quantity \n",
+    "        for product, quantity in inventory.items() \n",
+    "        if quantity > 0\n",
+    "    }\n",
+    "    return updated_inventory\n",
+    "\n",
+    "inventory = update_inventory(customer_orders, inventory)\n",
+    "\n",
+    "# 8. Imprimer les statistiques de la commande\n",
+    "def calculate_order_statistics(customer_orders, products):\n",
+    "    total_products_ordered = len(customer_orders)\n",
+    "    percentage_ordered = (total_products_ordered / len(products)) * 100\n",
+    "    return total_products_ordered, percentage_ordered\n",
+    "\n",
+    "def print_order_statistics(order_statistics):\n",
+    "    total_products_ordered, percentage_ordered = order_statistics\n",
+    "    print(\"\\nOrder Statistics:\")\n",
+    "    print(f\"Total Products Ordered: {total_products_ordered}\")\n",
+    "    print(f\"Percentage of Products Ordered: {percentage_ordered:.2f}%\")\n",
+    "\n",
+    "order_statistics = calculate_order_statistics(customer_orders, products)\n",
+    "print_order_statistics(order_statistics)\n",
+    "\n",
+    "# 9. Imprimer l'inventaire mis à jour\n",
+    "def print_updated_inventory(inventory):\n",
+    "    print(\"\\nUpdated Inventory:\")\n",
+    "    for product, quantity in inventory.items():\n",
+    "        print(f\"{product}: {quantity}\")\n",
+    "\n",
+    "print_updated_inventory(inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "560c63cb-3387-4545-a776-37c04ade4e3a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -93,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
